# Mechanistic-Interpretability-of-Open-Source-LLMs

./:    .gitignore  README.md  check_safetensors.py  environment.yml  inspect_last5_tokens.py  inspect_threshold.py  pyproject.toml  requirements.txt  run_pipeline.sh  run_pipeline_slurm.sh  test_decision_mode.py
archive/: 03_capture_activations.py  10_sae_training_mathematics.md.resolved  README.md  sae_config.yaml
configs/: experiment_config.yaml  transcoder_config.yaml
dashboard/: package-lock.json  package.json
dashboard_b1/: package-lock.json  package.json
dashboard_physics/: index.html
docs/: 03_mathematics.md.resolved  CD3_SETUP.md  COMPUTATIONAL_SPECIFICATIONS.md  CSD3_PIPELINE_GUIDE.md  PAPER_COMPARISON.md  PIPELINE_GUIDE.md  README_local.md  abstraction_baseline_results.md  abstraction_probe_designs.md  analysis_candidate_trace.md  behaviour_evaluation.md  behaviours.md  comparison_to_anthropic.md  implementation_plan.md  implementation_plan_tier1.md  methodology.md  negative_results.md  novel_behaviours.md  phase0_commands.md  plan.md  publication_intervention_plan.md.resolved  qwen3_mlp_inputs.md  report_multilingual.md  script_04_mathematical_walkthrough.md.resolved  selected_behaviours.md  theoretical_introduction.md
jobs/: 00_diagnose_sigill.sbatch  01_generate_prompts.sh  01_rebuild_venv_ampere.sbatch  02_fix_numpy.sbatch  02_run_baseline.sh  03_capture_activations.sh  03_fix_transformers.sbatch  04_extract_features.sh  06_attribution_graph.sh  07_interventions.sh  08_figures.sh  antonym_02_09.sbatch  cluster_joint_ablation.sbatch  ga_07.sbatch  (+73 more)
(+1109 files in other folders)
